<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="ccsan_abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">MadsSdk</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="ccsan_ccsan_material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="ccsan_ccsan_material_timepicker_am">AM</string>
    <string name="ccsan_ccsan_material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="ccsan_ccsan_material_timepicker_hour">Hour</string>
    <string name="ccsan_ccsan_material_timepicker_minute">Minute</string>
    <string name="ccsan_ccsan_material_timepicker_pm">PM</string>
    <string name="ccsan_ccsan_material_timepicker_select_time">Select time</string>
    <string name="ccsan_ccsan_material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mbridge_reward_appdesc">app desc</string>
    <string name="mbridge_reward_apptitle">app title</string>
    <string name="ccsan_mbridge_reward_clickable_cta_btntext">Play Game</string>
    <string name="mbridge_reward_endcard_ad">AD</string>
    <string name="ccsan_mbridge_reward_endcard_vast_notice">Do you want to learn more?</string>
    <string name="mbridge_reward_install">Install Now</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="ccsan_mtrl_picker_text_input_date_hint">Date</string>
    <string name="ccsan_ccsan_mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="ccsan_ccsan_mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="san_ad_no_net_guide_connect">CONNECT NETWORK</string>
    <string name="san_ad_no_net_guide_title">Oops！There was a network error. Please check your internet connection.</string>
    <string name="san_ads_open">OPEN</string>
    <string name="san_auto_reserve_title">The app will be booked automatically in %d seconds. Do you want to cancel it?</string>
    <string name="san_columbus_player_close_desc">"You will lose your reward. 
Are you sure you want to close the ad now ?"</string>
    <string name="san_columbus_player_close_resume">RESUME</string>
    <string name="san_columbus_player_close_title">Close Ad ?</string>
    <string name="san_columbus_player_close_video">CLOSE</string>
    <string name="san_common_app_run_failed">Unable to run the application</string>
    <string name="san_common_close_caps">CLOSE</string>
    <string name="san_common_content_apps">Apps</string>
    <string name="san_common_content_files">Files</string>
    <string name="san_common_content_zips">Zip</string>
    <string name="san_common_cta_desc">GO</string>
    <string name="san_common_desc_no">NO</string>
    <string name="san_common_desc_yes">YES</string>
    <string name="san_common_hybrid_web_timeout">"Poor network or wrong address.
Please try again."</string>
    <string name="san_common_load_error_set_network">CONNECT NETWORK</string>
    <string name="san_common_loading">Loading</string>
    <string name="san_common_more">MORE</string>
    <string name="san_common_operate_downloading">Downloading</string>
    <string name="san_common_operate_retry">Retry</string>
    <string name="san_common_tip_loading">Loading…</string>
    <string name="san_common_tip_waiting">Waiting</string>
    <string name="san_content_file_not_exist">File does not exist</string>
    <string name="san_content_file_open_not_support">This file type is not supported</string>
    <string name="san_countdown_got_reward">Got Reward</string>
    <string name="san_countdown_rewarded">Reward in %s s</string>
    <string name="san_countdown_skip">Skippable in %s s</string>
    <string name="san_media_player_error_wrong">Something goes wrong…</string>
    <string name="san_media_player_network_err_msg">Please check the network</string>
    <string name="san_no_net_guide_network_dialog_connect">SET INTERNET</string>
    <string name="san_no_net_guide_network_dialog_headline">Oops! No Internet connection</string>
    <string name="san_no_net_guide_network_dialog_refresh">NO,THANKS</string>
    <string name="san_request_failed_network_msg">"Oops! Network Error. 
Failed to load"</string>
    <string name="san_reserve_booked_cancel">Cancelled</string>
    <string name="san_reserve_later">later</string>
</resources>