<?xml version="1.0" encoding="utf-8"?>
<ccsancom.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/ccsan_material_clock_period_toggle" android:background="?colorSurface" android:visibility="gone" android:layout_width="@dimen/ccsan_material_clock_period_toggle_width" android:layout_height="@dimen/ccsan_material_clock_period_toggle_height" android:contentDescription="@string/material_clock_toggle_content_description" android:layout_marginStart="@dimen/ccsan_material_clock_period_toggle_margin_left" app:checkedButton="@id/material_clock_period_am_button" app:layout_constraintStart_toEndOf="@id/ccsan_material_clock_display" app:layout_constraintTop_toTopOf="parent" app:selectionRequired="true" app:singleSelection="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ccsancom.google.android.material.button.MaterialButton android:id="@id/material_clock_period_am_button" android:layout_width="wrap_content" android:text="@string/ccsan_ccsan_material_timepicker_am" android:insetTop="8.0dip" app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" style="?materialButtonOutlinedStyle" />
    <ccsancom.google.android.material.button.MaterialButton android:id="@id/material_clock_period_pm_button" android:layout_width="wrap_content" android:text="@string/ccsan_ccsan_material_timepicker_pm" android:insetBottom="8.0dip" app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" style="?materialButtonOutlinedStyle" />
</ccsancom.google.android.material.button.MaterialButtonToggleGroup>