<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/san_black_transparent_70" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/ccsan_san_guide_network_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/san_common_dimens_20dp" android:layout_marginRight="@dimen/san_common_dimens_20dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/san_common_text_size_20sp" android:textColor="@color/san_color_191919" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/san_common_dimens_24dp" android:layout_marginTop="@dimen/san_common_dimens_24dp" android:layout_marginRight="@dimen/san_common_dimens_24dp" android:layout_marginBottom="@dimen/san_common_dimens_14dp" android:text="@string/san_no_net_guide_network_dialog_headline" />
        <TextView android:textSize="@dimen/san_common_text_size_16sp" android:textColor="@color/san_text_color_75" android:id="@id/san_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/san_common_dimens_24dp" android:layout_marginRight="@dimen/san_common_dimens_24dp" android:layout_marginBottom="@dimen/san_common_dimens_36dp" />
        <LinearLayout android:gravity="center" android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/san_common_dimens_14dp" android:layout_marginBottom="@dimen/san_common_dimens_12dp">
            <TextView android:textSize="@dimen/san_common_text_size_14sp" android:textColor="@color/san_color_999999" android:layout_gravity="center_vertical" android:id="@id/san_tv_cancel" android:paddingLeft="@dimen/san_common_dimens_9dp" android:paddingTop="@dimen/san_common_dimens_5dp" android:paddingRight="@dimen/san_common_dimens_9dp" android:paddingBottom="@dimen/san_common_dimens_5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/san_no_net_guide_network_dialog_refresh" />
            <TextView android:textSize="@dimen/san_common_text_size_14sp" android:textStyle="bold" android:textColor="@color/san_white" android:gravity="center" android:id="@id/san_tv_connect" android:background="@color/san_color_00ca89" android:paddingLeft="@dimen/san_common_dimens_9dp" android:paddingTop="@dimen/san_common_dimens_5dp" android:paddingRight="@dimen/san_common_dimens_9dp" android:paddingBottom="@dimen/san_common_dimens_5dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/san_common_dimens_20dp" android:layout_marginRight="@dimen/san_common_dimens_20dp" android:text="@string/san_no_net_guide_network_dialog_connect" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>